--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 	font-style: normal;
   font-size:12px;
-  padding-bottom: 500px;
 }
 
 ul li {
@@ -52,18 +51,37 @@ p {
   margin: 16px 0 16px 0;
 }
 
-.closeParagraph {
-  margin: 0px;
-}
-
 a {
-  color: blue;
+  font-size:56px;
 }
 
+.closeParagraph {
+	left:50%;
+	position:absolute;
+	margin-left: -75px;
+	margin-top:-104px;
+	top: 50%;
+	float: center;
+}
+
+a:link {
+	text-decoration: none;
+	color: #FFF;
+}
 a:visited {
-  color: blue;
+	text-decoration: none;
+	color:#FFF;
 }
-
-a:hover, a:active, a:focus {
-  color:red;
+a:hover {
+	text-decoration: none;
+	color: #FFF;
+	background-color: #FFF;
+}
+a:active {
+	text-decoration: none;
+	color:#FFF;
+}
+a:link {
+	text-decoration: none;
+	color:#FFF;
 }
