--- a/css/entrance.css
+++ b/css/entrance.css
@@ -5,7 +5,7 @@ body {
 	margin-right: 0px;
 	margin-bottom: 0px;
   font-family: Arial, Helvetica, sans-serif;
-	font-size:14px;
+	font-size:16px;
 	color: #FFF;
 	text-align:center;
 	letter-spacing:2px;
@@ -50,13 +50,13 @@ body {
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		transform: translate(-50%, -50%);
-		width: 25%;
+		transform: translate(-50%, -49%);
+		width: 22%;
 	}
 
 	#text {
 		position: absolute;
-		top: 92%;
+		top: 96%;
 		left:50%;
 		text-align:center;
 		transform: translate(-50%, -50%);
@@ -88,12 +88,24 @@ body {
 
 
 	#logo {
-		left:50%;
-		position:absolute;
-		margin-left: -75px;
-		margin-top:-104px;
+		display: none;
+		position: absolute;
 		top: 50%;
-		float: center;
+		left: 50%;
+		/* translates the center point of the logo image */
+		transform: translate(-50%, -70%);
+	}
+
+	#square {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: 150px;
+		height: 150px;
+		background: #555;
+
+		/* translates the center point of the logo image */
+		transform: translate(-50%, -70%);
 	}
 
 	#text {
@@ -107,9 +119,6 @@ body {
 
 }
 
-
-
-
 a:link {
 	text-decoration: none;
 	color: #FFF;
@@ -121,8 +130,9 @@ a:visited {
 a:hover {
 	text-decoration: none;
 	color: #FFF;
-	background-color: #FFF;
+	background: linear-gradient(0deg, #e66465, #9198e5);
 }
+
 a:active {
 	text-decoration: none;
 	color:#FFF;
