--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ a:visited {
 a:hover {
 	text-decoration: none;
 	color: #FFF;
-  background: linear-gradient(#e66465, #9198e5);
+  background: linear-gradient(#EE609C,#F5F588);
 
 }
 a:active {
