--- a/css/style.css
+++ b/css/style.css
@@ -13,40 +13,20 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 	font-style: normal;
 	font-size:16px;
-	text-align:center;
 	letter-spacing:2px;
 }
 
-p {
-  margin: 16px 0 16px 0;
-}
-
-.closeParagraph {
-	left:50%;
-  top: 50%;
-	position:absolute;
-	margin-left: -75px;
-	margin-top:-104px;
-	float: center;
-}
-
 a {
-	padding-left: 20px;
-	padding-right: 20px;
+	/* padding-left: 20px; */
+	/* padding-right: 20px; */
+  text-decoration: none;
+  color: #000000;
 }
 
-a:link {
-	text-decoration: none;
-	color: #000000;
-}
-
-a:visited {
-  color: transparent;
-}
 a:hover {
   color: transparent;
 }
 
-a:active {
-  color: transparent;
+a:visited {
+  color: #000000;
 }
