--- a/css/entrance.css
+++ b/css/entrance.css
@@ -33,7 +33,7 @@
 	}
 
 
-	#square {
+	#square1 {
 		position: absolute;
 		top: 50%;
 		left: 50%;
@@ -49,7 +49,7 @@
 		margin-top: -4%;
 	}
 
-	#text {
+	#link {
 		position: absolute;
 		top: 94%;
 		left:50%;
@@ -82,7 +82,7 @@
 	}
 
 
-	#square {
+	#square1 {
 		position: absolute;
 		top: 50%;
 		left: 50%;
