--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,13 @@ body {
 	letter-spacing:2px;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 a {
-	/* padding-left: 20px; */
-	/* padding-right: 20px; */
   text-decoration: none;
   color: #000000;
 }
