--- a/css/brollAuth.css
+++ b/css/brollAuth.css
@@ -39,6 +39,25 @@
   cursor: pointer;
 }
 
+button {
+  font-size: 16px;
+  letter-spacing: 2px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  background: none!important;
+  border: none;
+  padding: 0!important;
+}
+
+button:hover {
+  color: transparent;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
+
 .mini {
   font-size: 8px;
 }
@@ -58,6 +77,31 @@ input {
   border-color: black;
 }
 
+input:focus {
+  outline: none;
+}
+
 input[type="submit"] {
   border: none;
+}
+
+#loginMessage {
+  display: inline-block;
+  max-width: 30%;
+  padding: 15px;
+  border-style: dashed;
+  border-width: thin;
+  /* margin-left: 10%; */
+  margin-top: 10%;
+}
+
+#requestAccess {
+  color: gray;
+  /* margin-left: 15px; */
+  margin-top: 5%;
+}
+
+#requestAccess a:hover {
+  color:black;
+  text-decoration: underline;
 }
