--- a/css/entrance.css
+++ b/css/entrance.css
@@ -11,7 +11,7 @@
 		top: 50%;
 		left: 50%;
 		width: 80%;
-
+    max-height: 557px;
 		/* centers the image horizontaly */
 		transform: translate(-50%, 0%);
 
@@ -55,6 +55,8 @@
 		left:50%;
 		text-align:center;
 		transform: translate(-50%, -50%);
+    background-color: white;
+    width: 80px;
 	}
 }
 
@@ -107,6 +109,12 @@
 		top: 92%;
 		left: 50%;
 		text-align:center;
+    background-color: white;
+    /* width: 72px; */
 	}
+
+  #link:hover {
+    background: transparent;
+  }
 
 }
