--- a/blog/css/post.css
+++ b/blog/css/post.css
@@ -100,3 +100,20 @@ a:hover {
   text-decoration: underline;
   color: #222;
 }
+
+/* settings for a row of horizontal images */
+.horizontalPics {
+  display: flex;
+}
+
+.horizontalPic {
+  flex: 33.33%;
+  padding: 5px;
+  max-width: 200px;
+}
+
+.doubleHorizontalPic {
+  flex: 50%;
+  padding: 5px;
+  max-width: 350px;
+}
